2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Worked on code
	templates.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs: fixed
	possible threading problem with class pad update.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed 'Bug 442047 - 'Go
	to declaration' missing for vars'.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Bump MD version.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Add null check.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.mdp:
	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs:
	* MonoDevelop.Ide.Gui.Content/ICodeStyleOperations.cs: Remove
	ICodeStyleOperations. Text editors and extensions can handle the
	commands directly with more flexibility.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed parameter name
	display in refactory commands.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Don't present the errors
	list when tasks are removed. Fixes bug #439919 - Error list popups
	and grab focus.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Fix in TransferFiles. Make a
	copy of the original project files before moving, since MoveDirectory
	will automatically remove the from the project.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: When browsing errors, show
	the activated error message in the status bar. Fixes bug #430493.

	* MonoDevelop.Ide.Gui/Pad.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs: